@@ -1,3 +1,8 @@
+2006-10-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimptransformtool.c (gimp_transform_tool_draw): allow
+	showing the grid for path transforms. Fixes bug #362588.
+
 2006-10-19  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/scheme-wrapper.[ch]: search script-fu.init in
